Changed font weight of primary button

--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ hr {
   margin-top: auto;
   padding: 10px 20px;
   font-size: 1em;
+  font-weight: bold;
   border: none;
   border-radius: 10px;
   color: white;
