--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,10 @@ hr {
 }
 
 .btn {
+  width: auto;
+  height: 45px;
   margin-top: auto;
+  margin-right: 10px;
   padding: 10px 20px;
   font-size: 1em;
   font-weight: bold;
@@ -49,8 +52,17 @@ hr {
   transition: background-color 0.3s ease;
 }
 
+.btn-secondary {
+  background-color: #41b549;
+  transition: background-color 0.3s ease;
+}
+
 .btn-primary:hover {
   background-color: #0068a8;
+}
+
+.btn-secondary:hover {
+  background-color: #008309;
 }
 
 .favorite-card-header {
