--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ hr {
   height: 45px;
   margin-top: auto;
   margin-right: 10px;
+  margin-bottom: 10px;
   padding: 10px 20px;
   font-size: 1em;
   font-weight: bold;
